<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>de.qytera</groupId>
        <artifactId>qtaf</artifactId>
        <version>0.1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>qtaf-core</artifactId>

    <developers>
        <developer>
            <id>tflasche</id>
            <name>Tilo Flasche</name>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:qytera-gmbh/qtaf.git</connection>
        <developerConnection>scm:git:ssh://github.com:qytera-gmbh/qtaf.git</developerConnection>
        <url>https://github.com/qytera-gmbh/qtaf/tree/master</url>
    </scm>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- Dependency Versions -->
        <seleniumJavaVersion>4.9.0</seleniumJavaVersion>
        <testNGVersion>7.7.1</testNGVersion>
        <testNGCucumberVersion>7.12.0</testNGCucumberVersion>
        <gsonVersion>2.10.1</gsonVersion>
        <guiceVersion>5.1.0</guiceVersion>
        <jerseyClientVersion>3.1.1</jerseyClientVersion>
        <pebbleVersion>3.2.1</pebbleVersion>
        <allureVersion>2.22.0</allureVersion>
        <rxJavaVersion>1.3.8</rxJavaVersion>
        <zip4JVersion>2.11.5</zip4JVersion>
        <log4JVersion>2.20.0</log4JVersion>
        <appiumVersion>8.3.0</appiumVersion>
        <jsonSimpleVersion>1.1.1</jsonSimpleVersion>
        <jsonPathVersion>2.7.0</jsonPathVersion>
        <guavaVersion>31.1-jre</guavaVersion>
        <commonsLangVersion>3.12.0</commonsLangVersion>
        <reflectionsVersion>0.10.2</reflectionsVersion>
        <webDriverManagerVersion>5.3.2</webDriverManagerVersion>
        <slf4jVersion>2.0.7</slf4jVersion>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${seleniumJavaVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-http-jdk-client</artifactId>
            <version>${seleniumJavaVersion}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testNGVersion}</version>
        </dependency>


        <!-- Cucumber -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${testNGCucumberVersion}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${testNGCucumberVersion}</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>${appiumVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4JVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4JVersion}</version>
        </dependency>
        <!-- Gson: Java to Json conversion -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gsonVersion}</version>
            <scope>compile</scope>
        </dependency>
        <!-- Guice dependency injection framework -->
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${guiceVersion}</version>
        </dependency>
        <!-- Simple JSON decoder -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>${jsonSimpleVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guavaVersion}</version>
        </dependency>


        <!-- JSON Path -->
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>${jsonPathVersion}</version>
        </dependency>

        <!-- String helper library -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commonsLangVersion}</version>
        </dependency>

        <!-- Reactive X -->
        <dependency>
            <groupId>io.reactivex</groupId>
            <artifactId>rxjava</artifactId>
            <version>${rxJavaVersion}</version>
        </dependency>

        <!-- Reflections library -->
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>${reflectionsVersion}</version>
        </dependency>

        <!-- Web Driver Manager -->
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webDriverManagerVersion}</version>
            <scope>compile</scope>
        </dependency>

        <!-- Template engine -->
        <dependency>
            <groupId>io.pebbletemplates</groupId>
            <artifactId>pebble</artifactId>
            <version>${pebbleVersion}</version>
        </dependency>

        <!-- ZIP library -->
        <dependency>
            <groupId>net.lingala.zip4j</groupId>
            <artifactId>zip4j</artifactId>
            <version>${zip4JVersion}</version>
        </dependency>

        <!-- Allure Model layer -->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-model</artifactId>
            <version>${allureVersion}</version>
        </dependency>


        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4jVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4jVersion}</version>
        </dependency>

        <dependency>
            <groupId>de.qytera</groupId>
            <artifactId>qtaf-io</artifactId>
            <version>0.1.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>de.qytera</groupId>
            <artifactId>qtaf-security</artifactId>
            <version>0.1.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

</project>